--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
 
 </head>
 <body>
-  <div></div>
+<div id="particles-js"></div>
 <script src="chrisbuttaro.js"></script>
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+
+  <script>
+
+  </script>
+
+
 </body>
 </html>
